pynestml/generated/PyNESTMLParser.py
# Generated from PyNESTML.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class PyNESTMLParser ( Parser ):

    grammarFileName = "PyNESTML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'integer'", u"'real'", u"'string'", 
                     u"'boolean'", u"'void'", u"'('", u"')'", u"'**'", u"'*'", 
                     u"'/'", u"'%'", u"'+'", u"'-'", u"'not'", u"'?'", u"'inf'", 
                     u"'~'", u"'&'", u"'^'", u"'|'", u"'<<'", u"'>>'", u"'<'", 
                     u"'<='", u"'=='", u"'!='", u"'<>'", u"'>='", u"'>'", 
                     u"'and'", u"'or'", u"'''", u"','", u"'recordable'", 
                     u"'function'", u"'='", u"';'", u"'shape'", u"'+='", 
                     u"'-='", u"'*='", u"'/='", u"'['", u"']'", u"'[['", 
                     u"']]'", u"'return'", u"'if'", u"'elif'", u"'else'", 
                     u"'for'", u"'in'", u"'...'", u"'step'", u"'while'", 
                     u"'neuron'", u"'state'", u"'parameters'", u"'internals'", 
                     u"'initial_values'", u"'update'", u"'equations'", u"'input'", 
                     u"'<-'", u"'current'", u"'spike'", u"'inhibitory'", 
                     u"'excitatory'", u"'output'", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"':'", u"'end'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"SL_COMMENT", u"ML_COMMENT", 
                      u"NEWLINE", u"WS", u"LINE_ESCAPE", u"BLOCK_OPEN", 
                      u"BLOCK_CLOSE", u"BOOLEAN_LITERAL", u"STRING_LITERAL", 
                      u"NAME", u"INTEGER", u"FLOAT" ]

    RULE_datatype = 0
    RULE_unitType = 1
    RULE_expression = 2
    RULE_simpleExpression = 3
    RULE_unaryOperator = 4
    RULE_bitOperator = 5
    RULE_comparisonOperator = 6
    RULE_logicalOperator = 7
    RULE_variable = 8
    RULE_differentialOrder = 9
    RULE_functionCall = 10
    RULE_odeFunction = 11
    RULE_odeEquation = 12
    RULE_odeShape = 13
    RULE_block = 14
    RULE_stmt = 15
    RULE_compoundStmt = 16
    RULE_smallStmt = 17
    RULE_assignment = 18
    RULE_declaration = 19
    RULE_returnStmt = 20
    RULE_ifStmt = 21
    RULE_ifClause = 22
    RULE_elifClause = 23
    RULE_elseClause = 24
    RULE_forStmt = 25
    RULE_whileStmt = 26
    RULE_signedNumericLiteral = 27
    RULE_nestmlCompilationUnit = 28
    RULE_neuron = 29
    RULE_body = 30
    RULE_blockWithVariables = 31
    RULE_updateBlock = 32
    RULE_equationsBlock = 33
    RULE_inputBlock = 34
    RULE_inputLine = 35
    RULE_inputType = 36
    RULE_outputBlock = 37
    RULE_function = 38
    RULE_parameter = 39

    ruleNames =  [ u"datatype", u"unitType", u"expression", u"simpleExpression", 
                   u"unaryOperator", u"bitOperator", u"comparisonOperator", 
                   u"logicalOperator", u"variable", u"differentialOrder", 
                   u"functionCall", u"odeFunction", u"odeEquation", u"odeShape", 
                   u"block", u"stmt", u"compoundStmt", u"smallStmt", u"assignment", 
                   u"declaration", u"returnStmt", u"ifStmt", u"ifClause", 
                   u"elifClause", u"elseClause", u"forStmt", u"whileStmt", 
                   u"signedNumericLiteral", u"nestmlCompilationUnit", u"neuron", 
                   u"body", u"blockWithVariables", u"updateBlock", u"equationsBlock", 
                   u"inputBlock", u"inputLine", u"inputType", u"outputBlock", 
                   u"function", u"parameter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    SL_COMMENT=70
    ML_COMMENT=71
    NEWLINE=72
    WS=73
    LINE_ESCAPE=74
    BLOCK_OPEN=75
    BLOCK_CLOSE=76
    BOOLEAN_LITERAL=77
    STRING_LITERAL=78
    NAME=79
    INTEGER=80
    FLOAT=81

    def __init__(self, input, output=sys.stdout):
        super(PyNESTMLParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNESTMLParser.DatatypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.isInt = None # Token
            self.isReal = None # Token
            self.isString = None # Token
            self.isBool = None # Token
            self.isVoid = None # Token
            self.unit = None # UnitTypeContext

        def unitType(self):
            return self.getTypedRuleContext(PyNESTMLParser.UnitTypeContext,0)


        def getRuleIndex(self):
            return PyNESTMLParser.RULE_datatype

        def accept(self, visitor):
            if hasattr(visitor, "visitDatatype"):
                return visitor.visitDatatype(self)
            else:
                return visitor.visitChildren(self)




    def datatype(self):

        localctx = PyNESTMLParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_datatype)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNESTMLParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                localctx.isInt = self.match(PyNESTMLParser.T__0)
                pass
            elif token in [PyNESTMLParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                localctx.isReal = self.match(PyNESTMLParser.T__1)
                pass
            elif token in [PyNESTMLParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                localctx.isString = self.match(PyNESTMLParser.T__2)
                pass
            elif token in [PyNESTMLParser.T__3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                localctx.isBool = self.match(PyNESTMLParser.T__3)
                pass
            elif token in [PyNESTMLParser.T__4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                localctx.isVoid = self.match(PyNESTMLParser.T__4)
                pass
            elif token in [PyNESTMLParser.T__5, PyNESTMLParser.NAME, PyNESTMLParser.INTEGER]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                localctx.unit = self.unitType(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNESTMLParser.UnitTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.base = None # UnitTypeContext
            self.left = None # UnitTypeContext
            self.leftParentheses = None # Token
            self.compoundUnit = None # UnitTypeContext
            self.rightParentheses = None # Token
            self.unitlessLiteral = None # Token
            self.divOp = None # Token
            self.right = None # UnitTypeContext
            self.unit = None # Token
            self.timesOp = None # Token
            self.powOp = None # Token
            self.exponent = None # Token

        def unitType(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNESTMLParser.UnitTypeContext)
            else:
                return self.getTypedRuleContext(PyNESTMLParser.UnitTypeContext,i)


        def INTEGER(self):
            return self.getToken(PyNESTMLParser.INTEGER, 0)

        def NAME(self):
            return self.getToken(PyNESTMLParser.NAME, 0)

        def getRuleIndex(self):
            return PyNESTMLParser.RULE_unitType

        def accept(self, visitor):
            if hasattr(visitor, "visitUnitType"):
                return visitor.visitUnitType(self)
            else:
                return visitor.visitChildren(self)



    def unitType(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNESTMLParser.UnitTypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_unitType, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNESTMLParser.T__5]:
                self.state = 89
                localctx.leftParentheses = self.match(PyNESTMLParser.T__5)
                self.state = 90
                localctx.compoundUnit = self.unitType(0)
                self.state = 91
                localctx.rightParentheses = self.match(PyNESTMLParser.T__6)
                pass
            elif token in [PyNESTMLParser.INTEGER]:
                self.state = 93
                localctx.unitlessLiteral = self.match(PyNESTMLParser.INTEGER)
                self.state = 94
                localctx.divOp = self.match(PyNESTMLParser.T__9)
                self.state = 95
                localctx.right = self.unitType(2)
                pass
            elif token in [PyNESTMLParser.NAME]:
                self.state = 96
                localctx.unit = self.match(PyNESTMLParser.NAME)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = PyNESTMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 99
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 102
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNESTMLParser.T__8]:
                            self.state = 100
                            localctx.timesOp = self.match(PyNESTMLParser.T__8)
                            pass
                        elif token in [PyNESTMLParser.T__9]:
                            self.state = 101
                            localctx.divOp = self.match(PyNESTMLParser.T__9)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 104
                        localctx.right = self.unitType(4)
                        pass

                    elif la_ == 2:
                        localctx = PyNESTMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.base = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 105
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 106
                        localctx.powOp = self.match(PyNESTMLParser.T__7)
                        self.state = 107
                        localctx.exponent = self.match(PyNESTMLParser.INTEGER)
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNESTMLParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.condition = None # ExpressionContext
            self.leftParentheses = None # Token
            self.term = None # ExpressionContext
            self.rightParentheses = None # Token
            self.logicalNot = None # Token
            self.powOp = None # Token
            self.right = None # ExpressionContext
            self.timesOp = None # Token
            self.divOp = None # Token
            self.moduloOp = None # Token
            self.plusOp = None # Token
            self.minusOp = None # Token
            self.ifTrue = None # ExpressionContext
            self.ifNot = None # ExpressionContext

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNESTMLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PyNESTMLParser.ExpressionContext,i)


        def unaryOperator(self):
            return self.getTypedRuleContext(PyNESTMLParser.UnaryOperatorContext,0)


        def simpleExpression(self):
            return self.getTypedRuleContext(PyNESTMLParser.SimpleExpressionContext,0)


        def bitOperator(self):
            return self.getTypedRuleContext(PyNESTMLParser.BitOperatorContext,0)


        def comparisonOperator(self):
            return self.getTypedRuleContext(PyNESTMLParser.ComparisonOperatorContext,0)


        def logicalOperator(self):
            return self.getTypedRuleContext(PyNESTMLParser.LogicalOperatorContext,0)


        def getRuleIndex(self):
            return PyNESTMLParser.RULE_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNESTMLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNESTMLParser.T__5]:
                self.state = 114
                localctx.leftParentheses = self.match(PyNESTMLParser.T__5)
                self.state = 115
                localctx.term = self.expression(0)
                self.state = 116
                localctx.rightParentheses = self.match(PyNESTMLParser.T__6)
                pass
            elif token in [PyNESTMLParser.T__11, PyNESTMLParser.T__12, PyNESTMLParser.T__16]:
                self.state = 118
                self.unaryOperator()
                self.state = 119
                localctx.term = self.expression(9)
                pass
            elif token in [PyNESTMLParser.T__13]:
                self.state = 121
                localctx.logicalNot = self.match(PyNESTMLParser.T__13)
                self.state = 122
                localctx.term = self.expression(4)
                pass
            elif token in [PyNESTMLParser.T__15, PyNESTMLParser.BOOLEAN_LITERAL, PyNESTMLParser.STRING_LITERAL, PyNESTMLParser.NAME, PyNESTMLParser.INTEGER, PyNESTMLParser.FLOAT]:
                self.state = 123
                self.simpleExpression()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 162
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 160
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = PyNESTMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 126
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 127
                        localctx.powOp = self.match(PyNESTMLParser.T__7)
                        self.state = 128
                        localctx.right = self.expression(10)
                        pass

                    elif la_ == 2:
                        localctx = PyNESTMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 129
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 133
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNESTMLParser.T__8]:
                            self.state = 130
                            localctx.timesOp = self.match(PyNESTMLParser.T__8)
                            pass
                        elif token in [PyNESTMLParser.T__9]:
                            self.state = 131
                            localctx.divOp = self.match(PyNESTMLParser.T__9)
                            pass
                        elif token in [PyNESTMLParser.T__10]:
                            self.state = 132
                            localctx.moduloOp = self.match(PyNESTMLParser.T__10)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 135
                        localctx.right = self.expression(9)
                        pass

                    elif la_ == 3:
                        localctx = PyNESTMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 136
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 139
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNESTMLParser.T__11]:
                            self.state = 137
                            localctx.plusOp = self.match(PyNESTMLParser.T__11)
                            pass
                        elif token in [PyNESTMLParser.T__12]:
                            self.state = 138
                            localctx.minusOp = self.match(PyNESTMLParser.T__12)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 141
                        localctx.right = self.expression(8)
                        pass

                    elif la_ == 4:
                        localctx = PyNESTMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 142
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 143
                        self.bitOperator()
                        self.state = 144
                        localctx.right = self.expression(7)
                        pass

                    elif la_ == 5:
                        localctx = PyNESTMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 146
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 147
                        self.comparisonOperator()
                        self.state = 148
                        localctx.right = self.expression(6)
                        pass

                    elif la_ == 6:
                        localctx = PyNESTMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 150
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 151
                        self.logicalOperator()
                        self.state = 152
                        localctx.right = self.expression(4)
                        pass
